use getDeclaredConstructor().newInstance() in ConfigurationSetup
https://errorprone.info/bugpattern/ClassNewInstance suggests this

and introduce new InvocationTargetError